--- a/Mine/thunder/.vscode/launch.json
+++ b/Mine/thunder/.vscode/launch.json
@@ -6,7 +6,7 @@
 	"version": "0.2.0",
     "configurations": [
         {
-            "name": "Extension",
+            "name": "Thunter",
             "type": "extensionHost",
             "request": "launch",
             "runtimeExecutable": "${execPath}",
