--- a/Mine/thunder/package.json
+++ b/Mine/thunder/package.json
@@ -2,7 +2,7 @@
     "name": "thunder-lwc",
     "displayName": "Thunder",
     "description": "Snippets for lwc (Salesforce)",
-    "version": "1.6.0",
+    "version": "1.8.0",
     "publisher": "Steve-DevOps",
     "icon": "images/flash.png",
     "engines": {
@@ -34,5 +34,9 @@
                 "path": "./snippets/batch-lwc.json"
             }
         ]
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/LBSInteractive/VSCE.git"
     }
 }
