--- a/Mine/thunder/package.json
+++ b/Mine/thunder/package.json
@@ -37,6 +37,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/LBSInteractive/VSCE/tree/master/Mine/thunder"
+        "url": "https://github.com/LBSInteractive/VSCE.git",
+        "directory": "Mine/thunder"
     }
 }
