--- a/Mine/thunder/package.json
+++ b/Mine/thunder/package.json
@@ -37,7 +37,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/LBSInteractive/VSCE.git",
-        "directory": "Mine/thunder"
+        "url": "https://github.com/LBSInteractive/VSCE.git"
     }
 }
